<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Menus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Home">Home</string>
    <string name="Settings">Settings</string>
    <string name="First">First</string>
    <string name="Second">Second</string>
    <string name="Third">Third</string>
    <string name="Four">Four</string>
    <string-array name="CIty">
        <item >Ahmedabad</item>
        <item >Baroda</item>
        <item >Rajkot</item>
    </string-array>
</resources>
